Footer update with WhatsApp icon - 16-1-26

--- a/zainshop/index.html
+++ b/zainshop/index.html
@@ -28,8 +28,8 @@
             <h2>Welcome to The Awan Hub</h2>
             <p>Discover amazing products in fashion, accessories, and more. Shop with confidence!</p>
             <button onclick="scrollToCategories()">Start Shopping</button>
-        <section id="featured">
-            <h2>Featured Products</h2>
+        <section id="featured"> -->
+              <h2>Featured Products</h2>
             <div class="product-grid">
                 <div class="product">
                     <img src="https://images.unsplash.com/photo-1523275335684-37898b6baf30?w=250&h=250&fit=crop" alt="Luxury Gold Watch">
