--- a/HTML/26-25-2025/index.html
+++ b/HTML/26-25-2025/index.html
@@ -128,7 +128,7 @@
 
 <form action="" method="post"> <br>
    
-    <input type=  "submit">
+  <button><a href="https://google.com">submit</a></button>
     
     <progress></progress>
 </fieldset>
